# Heterogeneous-Computing-Homework

./: .clang-format  .clangd  .gitignore  README.md  pyproject.toml  xmake.lua
HW1/: 作业一.md
HW2/: benchmark.nu  data-process.wls  xmake.lua  作业二.md
HW2/src/: HW-1.cxx  HW-2.cxx
HW3/: benchmark.nu  data-process.wls  xmake.lua  作业三.md
HW3/src/: matrix-mul-optimized.cxx  matrix-mul.cxx
HW4/: benchmark-opencl.nu  benchmark-sycl-cuda.nu  benchmark.nu  data-process.nu  data-process.wls  xmake.lua  作业四.md
HW4/src/: cuda-matrix-mul.cu  matrix-mul.cxx  sycl-matrix-mul.cxx
HW5/: benchmark.nu  xmake.lua  作业五.md
HW5/RotateImage/: Rotate.fsproj  rotateImage.fs
HW5/src/: bmp-rotate-opencl.cxx  rotate_image_opencl.cxx
HW6/: HW6.md  xmake.lua
HW6/src/: sync_test.cxx
HW7/: benchmark.nu  data-process.wls  xmake.lua  作业七.md
HW7/src/: convolution-cpu-optimized.cxx  convolution-opencl.cxx  convolution_cpu.cxx  convolution_cpu_optimized.cxx  convolution_opencl.cxx  convolution_opencl_optimized.cxx  utils.cxx  utils.hxx
LeNet5/: lenet.py  lenet5.cxx  save.py  train.py  xmake.lua
base/: base.cxx  base.hxx
xmake/: opencl.lua
