[project]
name = "leNet5"
version = "0.1.0"
description = "数据分析用的"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
cache-dir = "D:/.uv-store"
